Update HollieBot iframe

--- a/Bot Application1/default.htm
+++ b/Bot Application1/default.htm
@@ -8,6 +8,6 @@
     <h1>Bot_Application1</h1>
     <p>Describe your bot here and your terms of use etc.</p>
     <p>Visit <a href="https://www.botframework.com/">Bot Framework</a> to register your bot. When you register it, remember to set your bot's endpoint to <pre>https://<i>your_bots_hostname</i>/api/messages</p>
-    <iframe src="https://webchat.botframework.com/embed/HallieBot?t=yeloXdHQHEE.dAA.RgBPAEEAVQBRAFMATQBVAGYANgB1AA.MCe4axCN0QE.t87kOIErRzA.JCTowIZ-dACi_2HKPi67P6DFRZ9N-2B43gdjmWIRVyA" style="height: 502px; max-height: 502px;"></iframe>
-</body>
+    <iframe src="https://webchat.botframework.com/embed/HallieBot?t=yeloXdHQHEE.dAA.SgBSAEIAMABzAFUARAB1AFQAaABkAA.RwwhshSN0QE.Bga5aq9edow.qqzRteM0SiWEDa4Ccw_de2HpKTgZYfj9BS-7gFF1YOk" style="height: 502px; max-height: 502px;"></iframe>
+   </body>
 </html>
