fix greetings remove boiler plate text from default.htm

--- a/Bot Application1/default.htm
+++ b/Bot Application1/default.htm
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
 </head>
 <body style="font-family:'Segoe UI'">
-    <h1>Bot_Application1</h1>
-    <p>Describe your bot here and your terms of use etc.</p>
-    <p>Visit <a href="https://www.botframework.com/">Bot Framework</a> to register your bot. When you register it, remember to set your bot's endpoint to <pre>https://<i>your_bots_hostname</i>/api/messages</p>
+    <h1>HalleBot</h1>
+    <p>HalleBot is a 24x7 mental health aide.</p>
+    
     <iframe src="https://webchat.botframework.com/embed/HallieBot?t=yeloXdHQHEE.dAA.SgBSAEIAMABzAFUARAB1AFQAaABkAA.RwwhshSN0QE.Bga5aq9edow.qqzRteM0SiWEDa4Ccw_de2HpKTgZYfj9BS-7gFF1YOk" style="height: 502px; max-height: 502px;"></iframe>
    </body>
 </html>
