Update HollieBot default page

--- a/Bot Application1/default.htm
+++ b/Bot Application1/default.htm
@@ -1,13 +1,19 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
+ <head>
     <title></title>
     <meta charset="utf-8" />
-</head>
-<body style="font-family:'Segoe UI'">
+ </head>
+ <body style="font-family:'Segoe UI'">
     <h1>HalleBot</h1>
     <p>HalleBot is a 24x7 mental health aide.</p>
-    
-    <iframe src="https://webchat.botframework.com/embed/HallieBot?t=yeloXdHQHEE.dAA.SgBSAEIAMABzAFUARAB1AFQAaABkAA.RwwhshSN0QE.Bga5aq9edow.qqzRteM0SiWEDa4Ccw_de2HpKTgZYfj9BS-7gFF1YOk" style="height: 502px; max-height: 502px;"></iframe>
+    <a href='https://join.skype.com/bot/835842aa-423b-4b08-8846-dc6aedf7ad8d'><img src='https://dev.botframework.com/Client/Images/Add-To-Skype-Buttons.png'></a>
+	<p></p>
+    <a href="tel:+14259708220">Text HalleBot at (425) 970-8220</a>
+	<p></p>
+  <a href='https://webchat.botframework.com/embed/HallieBot?t=yeloXdHQHEE.dAA.RABUAGIASgBTAHoAWgBiAHMAbwBVAA._-RYgxuN0QE.zeJd41exaF4.-YQTfRKARsa7pLUeKFg6B9fFn0uK71txpH2rKyraCso'>
+Web Chat with HollieBot
+ </a>
+	<p></p>
    </body>
 </html>
