--- a/Bot Application1/default.htm
+++ b/Bot Application1/default.htm
@@ -11,7 +11,7 @@
 	<p></p>
     <a href="tel:+14259708220">Text HalleBot at (425) 970-8220</a>
 	<p></p>
-  <a href='https://webchat.botframework.com/embed/HallieBot?t=yeloXdHQHEE.dAA.RwBIADMAbQB3AE0AeABWAHEAcwBRAA.0rFW7BuN0QE.Fx6Uhxsqn24.FUbD-6XOaDMcolvX3Ib9H-EJCl22RywNx5uiXahQ9aI'>
+  <a href='https://webchat.botframework.com/embed/HallieBot?s=SeMGyveEb8c.cwA.6_c.jKYl4j3FQWnA6oyRkXa1uNLF9JpzEAfwKqo8u91OzNI'>
 Web Chat with HollieBot
  </a>
 	<p></p>
